# rust_elgamal

./: Cargo.toml  README.md
benches/: aes.rs  elgamal.rs
src/: elgamal.rs  lib.rs  main.rs
src/cipher/: elgamal.rs
tests/: elgamal.rs
