[package]
name = "rust_elgamal"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
block-buffer = "0.10.4"
block-modes = "0.9.1"
bytes = "1.10.1"
criterion = "0.5.1"
hex = "0.4.3"
openssl = "0.10.71"
rand = "0.9.0"

[[bench]]
name = "elgamal"
harness = false

[[bench]]
name = "aes"
harness = false
